--- a/css/form.css
+++ b/css/form.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../img/bg.jpg");
+    background: url("../img/CSUDHBackground.jpg");
     background-size: cover;
     background-position: center;
     font-family: 'roboto', sans-serif;
@@ -88,7 +88,7 @@ input:focus::placeholder{
 
 .alert-box{
     position: absolute;
-    top: 10%;
+    top: -100%;
     left: 50%;
     transform: translate(-50%);
     min-width: 150px;
