--- a/css/form.css
+++ b/css/form.css
@@ -31,6 +31,7 @@ body {
 }
 
 .heading {
+    opacity: 0;
     text-transform: capitalize;
     text-align: center;
     font-size: 88px;
@@ -40,6 +41,7 @@ body {
 
 input,
 .submit-btn {
+    opacity: 0;
     width: 80%;
     height: 35px;
     display: block;
@@ -72,9 +74,11 @@ input:focus::placeholder{
     padding: 0 20px;
     cursor: pointer;
     margin: 50px auto 0;
+    opacity: 0;
 }
 
 .link {
+    opacity: 0;
     text-align: center;
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.5);
